feat(env): adiciona arquivo .env e exemplo de configuração - Cria arquivo .env para variáveis de ambiente - Adiciona .env.example com instruções de configuração - Atualiza .gitignore para ignorar arquivos .env - Configura CORS e JWT no application.yaml